# modalai-px4-firmware

./: .gitmodules
ROMFS/px4fmu_common/init.d/: rc.mc_apps
boards/modalai/voxl2/: default.px4board
boards/modalai/voxl2-slpi/: default.px4board
boards/px4/sitl/: default.px4board
esc_calibration/: #reported power is 0-100, but in ESC fir.py
msg/: CMakeLists.txt  CbfDebug.msg  EffectivenessStatus.msg  NeuralControl.msg  SensorAngles.msg  SensorMagCalib.msg  SensorMagMux.msg  SensorMagMuxCalib.msg  SphericalAngles.msg  TofObstaclesChunk.msg
src/drivers/: drv_sensor.h
src/drivers/magnetometer/: CMakeLists.txt  Kconfig
src/lib/: CMakeLists.txt
src/lib/mixer_module/: mixer_module.cpp
src/lib/qpoases/: CMakeLists.txt
src/modules/control_allocator/: ControlAllocator.cpp  ControlAllocator.hpp  module.yaml
src/modules/ekf2/: EKF2.cpp
src/modules/logger/: logged_topics.cpp
src/modules/mavlink/: mavlink_main.cpp  mavlink_messages.cpp  mavlink_receiver.cpp  (+1 more)
src/modules/mc_neural_control/NeuralControl/: CMakeLists.txt  NeuralControl.cpp  NeuralControl.hpp
src/modules/mc_sm_control/: CMakeLists.txt  Kconfig  mc_sm_control.cpp  mc_sm_control.hpp  mc_sm_control_params.c
src/modules/mc_sm_control/SMAttitudeControl/: SMAttitudeControl.cpp  SMAttitudeControl.hpp
src/modules/mc_sm_control/SMPositionControl/: CMakeLists.txt  SMPositionControl.cpp  SMPositionControl.hpp
src/modules/mc_sm_control/attitude/: mc_sm_att_control.cpp  mc_sm_att_control.hpp
src/modules/mc_sm_control/attitude/SMAttitudeControl/: SMAttitudeControl.cpp  SMAttitudeControl.hpp
(+136 files in other folders)
